Ensure spacing looks good for list selection in EDS

--- a/src/collective/shibboleth/browser/shibboleth-ds/idpselect.css
+++ b/src/collective/shibboleth/browser/shibboleth-ds/idpselect.css
@@ -203,6 +203,6 @@ div.IdPSelectDropDown div {
 }
 /* END */
 
-#idpSelectIdPEntryTile {
+#idpSelectIdPListTile, #idpSelectIdPEntryTile {
     margin-top:15px;
 }
